# pyservice

./: .env  .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  compose.yml  pyproject.toml
ci-jobs/: update-package.sh
src/examples/: compose.override.yml  compose.yml
src/examples/default_microservice/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  setup.py
src/examples/default_microservice/src/calculator/: __init__.py  config.py
src/examples/default_microservice/src/calculator/celery_tasks/: tasks.py
src/examples/default_microservice/src/calculator/cli/: service.py  start-celery-dev.sh  start.py  start.sh
src/pyservice/: erase_project.py  init.py
src/pyservice/ddd/: model.py
src/pyservice/decorators/: decorators.py
src/pyservice/django/: views.py
src/pyservice/django/keycloak_auth/: __init__.py  authentication.py  keycloak.py  permissions.py  settings.py
src/pyservice/domain/: base.py  cluster.py  files.py
src/pyservice/files/: files.py
src/pyservice/initialization/: contents.py  domain.py  initialization.py
src/pyservice/initialization/templates/base/: .gitignore.tpl  .gitlab-ci.yml.tpl  Dockerfile.tpl  compose.override.yml.tpl  compose.yml.tpl  pyproject.toml.tpl
src/pyservice/initialization/templates/base/nginx/: Dockerfile.tpl  nginx.conf.tpl
src/pyservice/initialization/templates/base/src/{{app.app_name}}/: .env.tpl  (+2 more)
src/pyservice/initialization/templates/base/swagger/: Dockerfile.tpl
src/pyservice/initialization/templates/base/tests/: __init__.py.tpl  test_app_manager.py.tpl  test_django_account_model.py.tpl  test_domain.py.tpl  test_domain_orm.py.tpl
src/pyservice/log_tools/: __init__.py  decorators.py  log_tools.py  tools.py
src/pyservice/manager/: __init__.py  domain.py  manager.py
src/pyservice/mixins/: __init__.py  mixins.py
src/pyservice/pyconfig/: __init__.py  pyconfig.py
src/pyservice/tcpwait/: __init__.py  tcpwait.py
src/pyservice/text_tools/: __init__.py  russian_words.py  text_tools.py
src/pyservice/time_periods/: duration.py  limits.py  periods.py
tests/: __init__.py  file-in-new-location.txt  test_domain.py  test_dt.py  test_files.py  test_files_domain.py  test_logging.py  test_mixins.py  test_pyconfig.py  test_service_manager.py  test_tcpwait.py  test_text_tools.py
tests/env-files-for-tests/: .env.app  .env.ms
(+23 files in other folders)
