[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyservice"
authors = [
    {name = "Max Dubrovin"},
]

description = "Common tools for creating microservice."
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytz",
#    "yattag",
    "aiofiles",
    "celery",
    "pydantic",
    "pydantic_extra_types",
    "pydantic_settings",
    "PyYAML",
    "pika",
]
