[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator"
authors = [
    {name = "Albert Einstein"},
]

description = "The simplest calculator microservice."
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyservice @ git+https://pack:H4maFc_jxo6rnbaNmu8c@git.cebb.pro/ias-phoenix-native/submodules/pyservice.git@_package",
]
